--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -10,10 +10,10 @@ prev_next_navigation:
 
 # TODO Modify the contents below for the specific project. NOTE THE INDENTATION!
 
-title: "Android App Starter"
-description: "Trust me, it'll be cool!"
+title: "NASA APOD"
+description: "NASA Astronomy Picture of the Day"
 author:
-  name: "DDC Student"
+  name: "Minerva Franco"
 
 # Do not change the following line.
   copyright: true
