--- a/gradle.properties
+++ b/gradle.properties
@@ -29,10 +29,9 @@ minSdk=30
 versionCode=1
 versionName=1.0.0
 
-# TODO Change base package name; this will be the unique identifier of the app.
-basePackageName=edu.cnm.deepdive.appstarter
-# TODO Change user-facing app name.
-appName=App Starter
+basePackageName=edu.cnm.deepdive.nasaapod
+
+appName=NASA APOD
 
 # Other build properties
 javadocDestDir=../docs/api
