Starting service proxy and model classes.

--- a/gradle.properties
+++ b/gradle.properties
@@ -31,7 +31,9 @@ versionName=1.0.0
 
 basePackageName=edu.cnm.deepdive.nasaapod
 
-appName=NASA APOD
+appName=NASA APoD
 
 # Other build properties
 javadocDestDir=../docs/api
+
+baseUrl=https://api.nasa.gov/planetary/
