--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,10 +7,10 @@ kotlin="2.1.0"
 # Core Android plugin and library versions
 android-gradle = "8.7.3"
 app-compat = "1.7.0"
-activity = "1.10.0"
+activity = "1.10.1"
 lifecycle = "2.8.7"
 navigation = "2.8.8"
-constraint-layout = "2.2.0"
+constraint-layout = "2.2.1"
 recycler-view = "1.4.0"
 fragment = "1.8.6"
 preference = "1.2.1"
@@ -119,8 +119,8 @@ dagger-compiler = { group = "com.google.dagger", name = "dagger-compiler", versi
 # Apache Commons RNG-Simple
 commons-rng-simple = { group = "org.apache.commons", name = "commons-rng-simple", version.ref = "commons-rng-simple" }
 
-#Kizitinwose Calendar widget
-kizitonwoes-calendar = { group = "com.kizitonwose.calendar", name = "view", version.ref = "kizitonwose-calendar" }
+# Kizitinwose Calendar widget
+kizitonwose-calendar = { group = "com.kizitonwose.calendar", name = "view", version.ref = "kizitonwose-calendar" }
 
 # Libraries for JVM-based testing.
 junit-api = { group = "org.junit.jupiter", name = "junit-jupiter-api", version.ref = "junit" }
