Changed GitHub remote to Space-Seek

--- a/gradle.properties
+++ b/gradle.properties
@@ -29,9 +29,9 @@ minSdk=30
 versionCode=1
 versionName=1.0.0
 
-basePackageName=edu.cnm.deepdive.nasaapod
+basePackageName=edu.cnm.deepdive.spaceseek
 
-appName=NASA APoD
+appName=Space Seek
 
 # Other build properties
 javadocDestDir=../docs/api
