--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools">
 
+  <!-- Permissions for Notifications and Internet -->
   <uses-permission
     android:maxSdkVersion="33"
     android:name="android.permission.POST_NOTIFICATIONS"/>
@@ -17,17 +18,22 @@
     android:theme="@style/AppTheme"
     tools:ignore="AllowBackup,DataExtractionRules">
 
+    <!-- Main Activity -->
     <activity
       android:exported="true"
       android:name=".controller.MainActivity">
-
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
-
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
-
     </activity>
+
+    <!-- Settings Activity -->
+    <activity
+      android:exported="true"
+      android:name=".controller.SettingsActivity"
+      android:label="@string/settings_label"
+      android:theme="@style/AppTheme"/>
 
   </application>
 
